# template-python-django

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.agents/skills/: architecture.md  code-quality.md  security-performance.md  testing.md  version-control.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.weblapp/: template.json
apps/core/: __init__.py  exceptions.py  middleware.py  models.py  pagination.py  permissions.py
apps/users/: __init__.py  admin.py  apps.py  managers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_api.py  test_models.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
deploy/: entrypoint.sh
locale/en/LC_MESSAGES/: django.po
locale/tr/LC_MESSAGES/: django.po
tests/: __init__.py  test_health.py
